# TermPhoenix

./: .gitattributes  .gitignore  .gitleaks.toml  README.md  dev-setup.sh  init.sh  main.py  pyproject.toml  requirements.txt  run-dev.sh  setup.py  workflow.sh
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/workflows/: ci.yml
scripts/: quick_test.sh  setup_environment.sh
src/termphoenix/database/: __init__.py  manager.py
src/termphoenix/database/schemas/: initial.v1.sql
src/termphoenix/parser/: __init__.py  html_parser.py  models.py
tests/: test_database.py  test_database_comprehensive.py  test_html_parser.py  test_html_parser_comprehensive.py
