[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termphoenix"
version = "0.1.0"
description = "A intelligent web crawler that extracts special-interest terminology from websites"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["web-crawler", "terminology", "nlp", "special-interests"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
analysis = [
    "nltk>=3.8.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/froiloc/TermPhoenix"
Repository = "https://github.com/froiloc/TermPhoenix"

[project.scripts]
termphoenix = "termphoenix.main:main"

[tool.black]
line-length = 79
target-version = ['py312']
